# tecmp_can_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: .$tecmp_can_interface.drawio.bkp  .$walemo_can_design.drawio.bkp  tecmp_can_interface.drawio
include/tecmp_can_interface/: tecmp_addons.h  tecmp_to_socketcan.h
src/: tecmp_to_socketcan.cpp
